--- a/nerds.html
+++ b/nerds.html
@@ -27,7 +27,7 @@
  <div>
 
 <div class="panel" style="clear: left;">
-	<h1>Välkommen till Melvin</h1>
+	<h1>Välkommen till Nerds</h1>
 	
 
 	<p class="panelgrid">Nerds håller uppehåll till ht-19!
