--- a/index.html
+++ b/index.html
@@ -11,11 +11,23 @@
 <body>
 
 
-<div class="grid-container">
+<div class="grid-container" style="height: 100%;">
 
-<a href="nerds.html" class="box white">Nerds</a>
+<div>
+	<a href="nerds.html" class="box white">Nerds</a>
 
-<a href="utbildning.html" class="box black">IT-utbildningen</a>
+	<div style="text-align: center; padding-bottom: 150px; padding-top: 100px;">
+		<img class="imghov" src="img/dator.png" width="150" height="150">
+	</div>
+</div>
+
+
+<div style="background-color: #333333;">
+	<a href="utbildning.html" class="box black">IT-utbildningen</a>
+	<div style="text-align: center; padding-bottom: 150px; padding-top: 100px;">
+	<img class="imghov" src="img/sublime-thumb.png" width="150" height="150">
+</div>
+
 </div>
 
 </body>
