--- a/utbildning.html
+++ b/utbildning.html
@@ -10,16 +10,30 @@
 </head>
 <body>
  
- <div class="top-bar top-black">
+ <div class="container">
+ <div class="nav">
 
-<div class="top-text">Utbildningen</div>
+ 	<div class="headline">Nerds</div>
+ 	<div>
 
-<div class="flex">
-<div><a href="index.html" class="menulinks menulinks-black">Hem</a></div>
-<div class="padding-left"><a href="nerds.html" class="menulinks menulinks-black">Nerds</a></div>
-</div>	
- 
- </div>
+ 		<div class="links"><a href="index.html">Hem</a> <a href="nerds.html">Nerds</a></div>
+ 		<div class="links-small">
+ 			
+ 			<div class="hamburger"></div>
+ 			<div class="hamburger"></div>
+ 			<div class="hamburger"></div>
+
+<div class="dropdown-content">
+ 			<a href="index.html">Hem</a>
+ 			<a href="nerds.html">Nerds</a>
+
+ 		</div>
+ 		</div>
+
+
+ 	</div>
+
+ </div>	
 
  <div class="maingrid">
 
@@ -84,6 +98,8 @@ Alla är här för att lära sig. Välkomna 🙂
  	
 
  </div>
+
+</div>
 
 </body>
 </html>
