--- a/nerds.html
+++ b/nerds.html
@@ -18,7 +18,7 @@
  	<div>
 
  		<div class="links"><a href="index.html">Hem</a> <a href="utbildning.html">It-utbildningen</a></div>
- 		<div class="links-small">
+ 		<div class="links-small" onclick="">
  			
  			<div class="hamburger"></div>
  			<div class="hamburger"></div>
