--- a/utbildning.html
+++ b/utbildning.html
@@ -17,7 +17,7 @@
  	<div>
 
  		<div class="links"><a href="index.html">Hem</a> <a href="nerds.html">Nerds</a></div>
- 		<div class="links-small">
+ 		<div class="links-small" onclick="">
  			
  			<div class="hamburger"></div>
  			<div class="hamburger"></div>
