--- a/nerds.html
+++ b/nerds.html
@@ -40,7 +40,7 @@
  <div>
 
 <div class="panel" style="clear: left;">
-	<h1>Välkommen till Nerds</h1>
+	<h1>Välkommen till Nerdssss</h1>
 	
 
 	<p class="panelgrid">Nerds håller uppehåll till ht-19!
