--- a/utbildning.html
+++ b/utbildning.html
@@ -43,7 +43,7 @@
 	<h1>Välkommen till Ängelholms It-utbildning</h1>
 
 <a href="" class="big-button">Årskurs 1</a>
-<a href="" class="big-button">Årskurs 2</a>
+<a href="class2.html" class="big-button">Årskurs 2</a>
 <a href="" class="big-button">Årskurs 3</a>
 
 <h1>Om oss</h1>
