--- a/class2.html
+++ b/class2.html
@@ -42,6 +42,12 @@
 <div class="panel" style="clear: left;">
 	<h1>Årskurs 2</h1>
 
+	<h2>Lär dig att bygga en hemsida</h2>
+
+	<h3>Steg 1</h3>
+
+	<p>Börja med att skapa en filstruktur på datorn. Skapa en mapp som innehåller hela projektet. Därefter skapar man en index.html fil. Denna fil är startfilen när man går in på hemsidan.</p>
+
 
 </div>
 
