--- a/class2.html
+++ b/class2.html
@@ -46,7 +46,22 @@
 
 	<h3>Steg 1</h3>
 
-	<p>Börja med att skapa en filstruktur på datorn. Skapa en mapp som innehåller hela projektet. Därefter skapar man en index.html fil. Denna fil är startfilen när man går in på hemsidan.</p>
+	<p>Börja med att skapa en filstruktur på datorn. Skapa en mapp som innehåller hela projektet. Därefter skapar man en index.html fil. Denna fil är startfilen när man går in på hemsidan.</p><br>
+
+	<p><img width="200" height="100" src="img/hej.png"></p>
+
+	<h3>Steg 2</h3>
+
+	<p>Nu kan du börja skapa index.html filen. En html fil bör innehålla detta till att börja med. Meta name="viewport" detta gör så att sidan blir responsive. Detta innebär att sidan anpassar sig om man surfar från en mobil eller dator. Senare går vi in på hur man gör detta i css. I head finns det även en länk till vår css fil som vi skall skapa i steg 3.</p><br>
+
+	<p><img width="200" height="100" src="img/index.png"></p>
+
+	<h3>Steg 3</h3>
+
+	<p>Nu skapar vi ytterligare en mapp inne i test mappen. Denna döper vi till css. I css-mappen skapar vi en fil som heter main.css. Denna fil kommer innehålla css som styr utseendet på hemsidan.</p><br>
+
+	<p><img width="200" height="100" src="img/css.png"></p><br>
+	<p>I main.css har vi skapat en grund som nollställer css i samtliga browsers. Detta gör vi minimalt med * {margin: 0; padding: 0; box-sizing: border-box;}. Det finns även färdiga sidor som man kan använda för att nollställa css med. Kolla på nätet.</p><br>
 
 
 </div>
