--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<a href="nerds.html" class="box white">Nerds</a>
 
 	<div style="text-align: center; padding-bottom: 150px; padding-top: 100px;">
-		<img class="imghov" src="img/dator.png" width="150" height="150">
+		<img class="imghov" src="img/dator.png" max-width="350" height="150">
 	</div>
 </div>
 
@@ -25,7 +25,7 @@
 <div style="background-color: #333333;">
 	<a href="utbildning.html" class="box black">IT-utbildningen</a>
 	<div style="text-align: center; padding-bottom: 150px; padding-top: 100px;">
-	<img class="imghov" src="img/sublime-thumb.png" width="150" height="150">
+	<img class="imghov" src="img/sublime-thumb.png" max-width="350" height="150">
 </div>
 
 </div>
