--- a/nerds.html
+++ b/nerds.html
@@ -73,7 +73,9 @@ Kontakta:
 
 Joakim Rehnberg (lärare) joakim.rehnberg@engelholm.se tel: 0760 179048
 
-Lennart Dock (lärare) lennart.dock@engelholm.se tel: 0733 944909 <img src="img/hej.jpg" class="blur" style="width: 300px"></p>
+Lennart Dock (lärare) lennart.dock@engelholm.se tel: 0733 944909 </p>
+
+<p><img src="img/hej.jpg" class="blur" style="width: 300px"></p>
 </div>
 
 </div>
