--- a/nerds.html
+++ b/nerds.html
@@ -10,14 +10,13 @@
 </head>
 <body>
  
-<div class="container"> 
-
+ <div class="container">
  <div class="nav">
 
  	<div class="headline">Nerds</div>
  	<div>
 
- 		<div class="links"><a href="index.html">Hem</a> <a href="utbildning.html">It-utbildningen</a></div>
+ 		<div class="links"><a href="index.html">Hem</a> <a href="utbildning.html">Utbildningen</a></div>
  		<div class="links-small" onclick="">
  			
  			<div class="hamburger"></div>
@@ -26,7 +25,7 @@
 
 <div class="dropdown-content">
  			<a href="index.html">Hem</a>
- 			<a href="utbildning.html">Utbildningen</a>
+ 			<a href="utbildning.html">It-utbildningen</a>
 
  		</div>
  		</div>
@@ -35,12 +34,14 @@
  	</div>
 
  </div>	
-<div class="maingrid">
+
+ <div class="maingrid">
 
  <div>
 
 <div class="panel" style="clear: left;">
-	<h1>Välkommen till Nerds</h1>
+	
+<h1>Välkommen till Nerds</h1>
 	
 
 	<p class="panelgrid">Nerds håller uppehåll till ht-19!
@@ -75,27 +76,50 @@ Joakim Rehnberg (lärare) joakim.rehnberg@engelholm.se tel: 0760 179048
 
 Lennart Dock (lärare) lennart.dock@engelholm.se tel: 0733 944909 </p>
 
-<p><img src="img/hej.jpg" class="blur" style="width: 300px"></p>
-</div>
+<p><img src="img/hej.jpg" class="blur" style="width: 300px"></p>	
 
 </div>
 
-<div>
+</div>
 
 <div class="panel">
 <h1>Aktiviteter</h1>
 
-<div class="comments">Senaste kommentarerna</div>
-<div class="comments">Arkiv</div>
-<div class="comments">Kategorier</div>
-
-
-</div>	
+<div class="calender">
+<div class="calender-top">Kalender</div>
+<div class="calender-grid">
+	<div>
+		<div class="calender-date">Datum</div>
+		<div class="row">2019-03-26</div>
+		<div class="row">2019-03-26</div>
+		<div class="row">2019-03-26</div>
+		<div class="row">2019-03-26</div>
+		<div class="row">2019-03-26</div>
+		<div class="row">2019-03-26</div>
+		<div class="row">2019-03-26</div>
+		<div class="row">2019-03-26</div>
+	</div>
+	<div>
+		<div class="calender-date">Händelser</div>
+		<div class="row">Vi bjuder på fika </div>
+		<div class="row">Test</div>
+		<div class="row">Vi bjuder på fika </div>
+		<div class="row">Test</div>
+		<div class="row">Vi bjuder på fika </div>
+		<div class="row">Test</div>
+		<div class="row">Vi bjuder på fika </div>
+		<div class="row">Test</div>
+	</div>
 </div>
 
+</div>
 
 </div>
-</div> 
+ 	
+
+ </div>
+
+</div>
 
 </body>
 </html>
