--- a/nerds.html
+++ b/nerds.html
@@ -44,7 +44,7 @@
 <h1>Välkommen till Nerds</h1>
 	
 
-	<p class="panelgrid">Nerds håller uppehåll till ht-19!
+	<p>Nerds håller uppehåll till ht-19!
 Vill du komma under vårterminen så kontakta Lennart eller Joakim så kan vi säkert ordna något!
 Stort tack till alla som besökt oss och inte minst våra elever som ställt upp!!
 OBS! Vi måste tyvärr hålla dörrar låsta så för att komma in så ring på klockan där det står NERDS!
@@ -72,11 +72,15 @@ Har du frågor eller undrar över något?<br><br>
 
 Kontakta:
 
-Joakim Rehnberg (lärare) joakim.rehnberg@engelholm.se tel: 0760 179048
+Joakim Rehnberg (lärare)<br>
+joakim.rehnberg@engelholm.se<br> 
+tel: 0760 179048<br><br>
 
-Lennart Dock (lärare) lennart.dock@engelholm.se tel: 0733 944909 </p>
+Lennart Dock (lärare)<br>
+lennart.dock@engelholm.se<br>
+tel: 0733 944909</p>
 
-<p><img src="img/hej.jpg" class="blur" style="width: 300px"></p>	
+<p><br><br><img src="img/hej.jpg" class="blur" style="width: 300px"></p>	
 
 </div>
 
