--- a/nerds.html
+++ b/nerds.html
@@ -50,7 +50,7 @@ Stort tack till alla som besökt oss och inte minst våra elever som ställt upp
 OBS! Vi måste tyvärr hålla dörrar låsta så för att komma in så ring på klockan där det står NERDS!
 Nerds är till för dig som går i årskurs åtta och nio och bedrivs av lärare och elever från Ängelholms IT-utbildning (El-och Energiprogrammets datorinriktning på Rönneskolan).<br><br>
 
-Kom utan anmälan vilken vecka du vill! Gärna fler än 1 vecka så hinner du vara med på mer 🙂
+Kom utan anmälan vilken vecka du vill! Gärna fler än 1 vecka så hinner du vara med på mer
 
 Hos oss kan du prova på olika saker som ingår i de olika kurserna på Ängelholms IT-utbildning (El-och Energiprogrammets IT-inriktning).
 
@@ -80,7 +80,7 @@ Lennart Dock (lärare)<br>
 lennart.dock@engelholm.se<br>
 tel: 0733 944909</p>
 
-<p><br><br><img src="img/hej.jpg" class="blur" style="width: 300px"></p>	
+<p><br><br><img src="img/hej.jpg" class="blur"></p>	
 
 </div>
 
