--- a/utbildning.html
+++ b/utbildning.html
@@ -54,7 +54,7 @@ Det är ett program där praktiska experiment och labbar varvas med modern och u
 Kurserna som erbjuds täcker allt mellan grundkunskaper till mer avancerad programmering för ex. webbservrar. Detta ger en bred utbildning som ger dig en bra grund för att fortsätta  läsa vidare, eller för att få ett jobb direkt efter din gymnasieutbildning.
 Alla lärare är engagerade och villiga att hjälpa dig nå upp till din potential. Och det är  inte bara stela läroplaner som gäller; om du är intresserad och visar att du vill arbeta  på ett projekt, såsom att bygga en 3D­printer, eller att utföra en uppgift på ett alternativt sätt som låter dig visa dina kunskaper mer så arbetar alltid lärarna för att  hjälpa dig med detta. Ängelholms IT utbildning är ett program där både lärarna och eleverna är starkt  intresserade av det vi pysslar med. <br><br>
 
-Alla är här för att lära sig. Välkomna 🙂
+Alla är här för att lära sig. Välkomna
 
 /Jonatan, Patrik och Morgan elever i EDT3 -2015</p>
 
