--- a/utbildning.html
+++ b/utbildning.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Nerds</title>
+	<title>Utbildning</title>
 
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 
@@ -14,6 +14,8 @@
  <div class="nav">
 
  	<div class="headline">Nerds</div>
+
+
  	<div>
 
  		<div class="links"><a href="index.html">Hem</a> <a href="nerds.html">Nerds</a></div>
